[package]
authors = ["Steve Pryde <spryde81@gmail.com>"]
edition = "2018"
name = "rustonator"
version = "0.1.0"

[dependencies]
async-std = "1.5"
bitflags = "1.1.0"
chrono = "0.4"
futures = "0.3"
itertools = "0.8"
log = "0.4"
rand = "0.7"
serde_json = "1.0"
serde_repr = "0.1"
tungstenite = "0.10"

[dependencies.async-tungstenite]
features = ["async-std-runtime"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"
