[package]
authors = ["Steve Pryde <spryde81@gmail.com>"]
edition = "2018"
name = "rustonator"
version = "0.1.0"

[dependencies]
bitflags = "1.1.0"
chrono = "0.4"
futures = "0.3"
itertools = "0.8"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
tungstenite = "0.10"
tokio-tungstenite = "0.10"
fern = "0.5"
tokio = { version = "0.2", features = ["full"]}
